--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: next-app
 spec:
   containers:
-  - name: nginx
+  - name: next-app
     image: nginx
     ports:
     - containerPort: 80
